revert refactoring and add test according to feedback